--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -15,6 +15,7 @@ exec-once = waybar & hyprpaper & hypridle
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 # env = WLR_RENDERER,vulkan
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
