Using appimages directly

--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -114,7 +114,7 @@ $mainMod = SUPER
 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, G, exec, appimage-run ~/1_personal/sources/appimages/ES-DE_x64.AppImage
+bind = $mainMod, G, exec, appimage-run ~/1_personal/extra/appimages/ES-DE_x64.AppImage
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, Q, killactive, 
 
@@ -124,11 +124,9 @@ bind = $mainMod, D, exec, wofi -c ~/.config/wofi/wofi.conf
 bind = $mainMod, I, exec, firefox
 bind = $mainMod SHIFT, J, exec, qjackctl
 bind = $mainMod, K, exec, virt-manager
-bind = $mainMod, M, exec, cider-2
-bind = $mainMod, N, exec, joplin-desktop
-
-#bind = $mainMod SHIFT, L, exec, swaylock -f -e -c 1d2021 --inside-color 000000b3 -s fill -i ~/.cache/lockscreen; sleep 1; hyprctl dispatch dpms off
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, M, exec, appimage-run ~/1_personal/extra/appimages/cider-linux-x64.AppImage
+bind = $mainMod, N, exec, joplin-desktop
 
 # Backscreen light binding
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
