--- a/nixos/home-manager/gmc/hypr/hyprpaper.conf
+++ b/nixos/home-manager/gmc/hypr/hyprpaper.conf
@@ -3,4 +3,7 @@ wallpaper = eDP-1,~/.config/hypr/bg.jpg
 wallpaper = DP-1,~/.config/hypr/bg.jpg
 wallpaper = DP-2,~/.config/hypr/bg.jpg
 wallpaper = DP-3,~/.config/hypr/bg.jpg
+wallpaper = HDMI-A-1,~/.config/hypr/bg.jpg
+wallpaper = HDMI-A-2,~/.config/hypr/bg.jpg
+wallpaper = HDMI-A-3,~/.config/hypr/bg.jpg
 
