Added HDMI screens to waypaper

--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -101,8 +101,8 @@ misc {
 }
 
 windowrulev2 = workspace 2,class:^(@joplin/app-desktop)$
-windowrulev2 = workspace 2,class:^(code-url-handler)$
-windowrulev2 = workspace 4,class:^(Cider)$
+windowrulev2 = workspace 3,class:^(code-url-handler)$
+windowrulev2 = workspace 4,class:^(cider)$
 windowrulev2 = workspace 5,class:^(virt-manager)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
