--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -46,7 +46,7 @@ general {
 
     layout = dwindle
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/
     allow_tearing = false
 }
 
@@ -112,9 +112,12 @@ $mainMod = SUPER
 
 # Personal binds
 
+$VG = ~/spaces/entertainment/videogames
+$MUSIC = ~/spaces/entertainment/music
+
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, G, exec, appimage-run ~/extra/appimages/ES-DE_x64.AppImage
+bind = $mainMod, G, exec, appimage-run $VG/appImages/ES-DE_x64.AppImage --home $VG
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, Q, killactive, 
 
@@ -125,7 +128,7 @@ bind = $mainMod, I, exec, firefox
 bind = $mainMod SHIFT, J, exec, qjackctl
 bind = $mainMod, K, exec, virt-manager
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, M, exec, appimage-run ~/extra/appimages/cider-linux-x64.AppImage
+bind = $mainMod, M, exec, appimage-run $MUSIC/appImages/cider-linux-x64.AppImage
 bind = $mainMod, N, exec, joplin-desktop
 
 # Backscreen light binding
