--- a/ansible/playbooks/roles/timeserver/files/chrony.conf
+++ b/ansible/playbooks/roles/timeserver/files/chrony.conf
@@ -47,6 +47,6 @@ makestep 1 3
 leapsectz right/UTC
 
 # GPS!
-refclock SHM 0 refid GPS offset 0.0703 precision 1e-3 poll 3
+refclock SHM 0 refid GPS offset 0.0703 precision 1e-3 poll 3 trust
 
 allow all
