Added vault sync command

--- a/nixos/home-manager/gmc/hypr/hyprland.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland.conf
@@ -130,6 +130,8 @@ bind = $mainMod, K, exec, virt-manager
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, appimage-run $MUSIC/appImages/cider-linux-x64.AppImage
 bind = $mainMod, N, exec, joplin-desktop
+bind = $mainMod, O, exec, obsidian
+bind = $mainMod, Z, exec, zotero
 
 # Backscreen light binding
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
