--- a/nixos/home-manager/gmc/hypr/hyprland-glaucus.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-glaucus.conf
@@ -1,6 +1,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+#monitor=,preferred,auto,auto
+monitor=DP-3, 1920x1200@59.95, 0x0, 1   # Eizo EV2436W (Montreal)
+monitor=eDP-1, 1366x768@60.0020, -1366x600, 1   # Glaucus
 
 # Logging
 #disable_logs = false
