--- a/ansible/playbooks/group_vars/netcontrol.yml
+++ b/ansible/playbooks/group_vars/netcontrol.yml
@@ -5,7 +5,7 @@ named:
   negative_cache_ttl: 86400
   refresh: 86400
   retry: 28800
-  serial: 2025022801
+  serial: 2025031301
   ttl: 86400
   v6: false
   subnets:
@@ -30,6 +30,7 @@ named:
         rpi2: 32
         rpi3: 33
         rpi4: 34
+        spectre: 254
     - netid: 73
       hosts:
         fujiko: 12
