Screen lock not as aggressive

--- a/nixos/home-manager/gmc/hypr/hypridle.conf
+++ b/nixos/home-manager/gmc/hypr/hypridle.conf
@@ -5,17 +5,17 @@ general {
 }
 
 listener {
-    timeout = 300                                 # 5min
+    timeout = 900                                 # 15 min to screen lock
     on-timeout = hyprlock
 }
 
 listener {
-    timeout = 330                                 # 5.5min
+    timeout = 1200                                # 20 min to screen off
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
 listener {
-    timeout = 1800                                # 30min
+    timeout = 1800                                # 30 min to sleep
     on-timeout = systemctl suspend
 }
