Added monitors to murasaki

--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -1,6 +1,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+#monitor=,preferred,auto,auto
+monitor=eDP-1, 1920x1080@60.0000, 0x0, 1   # Murasaki screen
+monitor=DP-1, 1920x1080@60.0000, -1280x0, 1   # XP-Pen Artist 13.3
 
 # Logging
 #disable_logs = false
