Added keyb brightness and polkit

--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -2,7 +2,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
 monitor=eDP-1, 1920x1080@60.0000, 0x0, 1   # Murasaki screen
-monitor=DP-1, 1920x1080@60.0000, -1280x0, 1   # XP-Pen Artist 13.3
+monitor=DP-1, 1920x1080@60.0000, -1920x0, 1   # XP-Pen Artist 13.3
 
 # Logging
 #disable_logs = false
@@ -10,7 +10,7 @@ monitor=DP-1, 1920x1080@60.0000, -1280x0, 1   # XP-Pen Artist 13.3
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & hypridle
+exec-once = waybar & hyprpaper & hypridle & systemctl --user start hyprpolkitagent
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -30,7 +30,7 @@ input {
 
     follow_mouse = 1
 
-    touchpad {
+    touchpad 2
         natural_scroll = no
     }
 
@@ -138,6 +138,10 @@ bind = $mainMod, Z, exec, zotero
 # Backscreen light binding
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
+
+# Keyboard backlight binding
+bind = $mainMod, +, exec, brightnessctl -d *::kbd_backlight set +10%
+bind = $mainMod, -, exec, brightnessctl -d *::kbd_backlight set -10%
 
 # Audio binds
 # WPCtl is "Wireplumber," the control for PipeWire. It is equivalent to
