Turned off keyboard on start

--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -10,7 +10,9 @@ monitor=DP-1, 1920x1080@60.0000, -1920x0, 1   # XP-Pen Artist 13.3
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & hypridle & systemctl --user start hyprpolkitagent
+$polkit = systemctl --user start hyprpolkitagent
+$kbd = brightnessctl -d platform::kbd_backlight set
+exec-once = waybar & hyprpaper & hypridle & $polkit & $kbd 0%
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -140,8 +142,8 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 # Keyboard backlight binding
-bind = $mainMod, +, exec, brightnessctl -d *::kbd_backlight set +10%
-bind = $mainMod, -, exec, brightnessctl -d *::kbd_backlight set -10%
+bind = $mainMod, +, exec, brightnessctl -d platform::kbd_backlight set +10%
+bind = $mainMod, -, exec, brightnessctl -d platform::kbd_backlight set -10%
 
 # Audio binds
 # WPCtl is "Wireplumber," the control for PipeWire. It is equivalent to
