--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -142,8 +142,8 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 # Keyboard backlight binding
-bind = $mainMod, EQUAL, exec, $kbd +10%
-bind = $mainMod, MINUS, exec, $kbd -10%
+bind = $mainMod, EQUAL, exec, $kbd +50%
+bind = $mainMod, MINUS, exec, $kbd 50%-
 
 # Audio binds
 # WPCtl is "Wireplumber," the control for PipeWire. It is equivalent to
