Moved OpenTablet to DP-1 by rule

--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -108,6 +108,8 @@ windowrulev2 = workspace 2,class:^(@joplin/app-desktop)$
 windowrulev2 = workspace 3,class:^(code-url-handler)$
 windowrulev2 = workspace 4,class:^(cider)$
 windowrulev2 = workspace 5,class:^(virt-manager)$
+windowrulev2 = monitor DP-1,class:^(krita)$
+windowrulev2 = monitor DP-1,class:^(OpenTabletDriver.UX.Gtk)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
