--- a/nixos/home-manager/gmc/hypr/hyprland-glaucus.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-glaucus.conf
@@ -10,7 +10,10 @@ monitor=eDP-1, 1366x768@60.0020, -1366x600, 1   # Glaucus
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & hypridle
+$polkit = systemctl --user start hyprpolkitagent
+$kbd = brightnessctl -d platform::kbd_backlight set
+exec-once = waybar & hyprpaper & hypridle & $polkit & $kbd 0%
+
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -138,6 +141,10 @@ bind = $mainMod, Z, exec, zotero
 # Backscreen light binding
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
+
+# Keyboard backlight binding
+bind = $mainMod, EQUAL, exec, $kbd +50%
+bind = $mainMod, MINUS, exec, $kbd 50%-
 
 # Audio binds
 # WPCtl is "Wireplumber," the control for PipeWire. It is equivalent to
