--- a/ansible/playbooks/roles/common/tasks/main.yml
+++ b/ansible/playbooks/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # Linux ===================================================================
 - name: linux setup
-  when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
+  when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian" or ansible_distribution=="Linux Mint"
   become: true
   block:
     - import_tasks: binary_packages.yml
