--- a/ansible/playbooks/roles/user_gmc/tasks/main.yml
+++ b/ansible/playbooks/roles/user_gmc/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: linux setup for user gmc
-  when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
+  when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian" or ansible_distribution == "Linux Mint"
   become: true
   block:
     - import_tasks: gmc_shell.yml
