--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -8,7 +8,7 @@ monitor=DP-3, 1920x1200@59.95, 0x0, 1   # Eizo EV2436W (Montreal)
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & hypridle
+exec-once = waybar & hyprpaper & hypridle & streamdeck -n
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
