Added XP Pen to Hyprctl

--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -1,6 +1,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-3, 1920x1200@59.95, 0x0, 1   # Eizo EV2436W (Montreal)
+monitor=DP-3, 1920x1200@59.95, 0x0, 1       # Eizo EV2436W (Montreal)
+monitor=HDMI-A-1, 1920x1080@60.04, -1920x0  # XP Pen Artist Pro v2 13.3
 
 # Logging
 #disable_logs = false
