XP Pen works (without keys created yet)

--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -17,9 +17,7 @@ exec-once = waybar & hyprpaper & hypridle & streamdeck -n
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
-# env = WLR_RENDERER,vulkan
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,ca,us
     kb_variant = ,multix,intl
@@ -28,12 +26,11 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+    tablet {
+        output = HDMI-A-1
+    };
 }
 
 general {
