--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -22,6 +22,7 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 # env = WLR_RENDERER,vulkan
 
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,ca,us
@@ -35,6 +36,10 @@ input {
     touchpad 2
         natural_scroll = no
     }
+
+    tablet {
+        output = DP-1
+    };
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
