--- a/k8s/services/02_lb/l2advertisement.yaml
+++ b/k8s/services/02_lb/l2advertisement.yaml
@@ -2,5 +2,5 @@
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: cummings-online-local
+  name: it
   namespace: metallb-system
