Removed test password from openldap

--- a/k8s/fleetwood/aaa/openldap/01_ldap_deploy.yaml
+++ b/k8s/fleetwood/aaa/openldap/01_ldap_deploy.yaml
@@ -27,9 +27,15 @@ spec:
             - name: LDAP_ROOT
               value: "dc=cummings-online,dc=local"
             - name: LDAP_ADMIN_USERNAME
-              value: admin
+              valueFrom:
+                secretKeyRef:
+                  name: ldap-admin
+                  key: username 
             - name: LDAP_ADMIN_PASSWORD
-              value: adminpassword
+              valueFrom:
+                secretKeyRef:
+                  name: ldap-admin
+                  key: password
             - name: LDAP_SKIP_DEFAULT_TREE
               value: "yes"
           ports:
