Creating users by script

--- a/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
+++ b/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
@@ -33,7 +33,7 @@ spec:
             - name: LDAP_PORT_NUMBER
               value: "389"
             - name: LDAP_ROOT
-              value: "o=Cummings Online"
+              value: "dc=cummings-online,dc=ca"
             - name: LDAP_ADMIN_USERNAME
               valueFrom:
                 secretKeyRef:
