--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -2,7 +2,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
 monitor=eDP-1, 1920x1080@60.0000, 0x0, 1   # Murasaki screen
-monitor=DP-1, 1920x1080@60.0000, -1920x0, 1   # XP-Pen Artist 13.3
+#monitor=DP-1, 1920x1080@60.0000, -1920x0, 1   # XP-Pen Artist 13.3
 
 # Logging
 #disable_logs = false
