--- a/k8s/fleetwood/aaa/bind9/configmap.yaml
+++ b/k8s/fleetwood/aaa/bind9/configmap.yaml
@@ -7,18 +7,19 @@ metadata:
 data:
   config: |
     acl bad_networks { };
+    acl cluster { 10.42.0.0/16; };
+    acl secondaries { 192.168.73.31; };
     acl trusted {
-      127.0.0.1;
-      10.0.0.0/24;
       10.11.0.0/24;
       172.16.73.0/24;
       192.168.68.0/24; 
       192.168.73.0/24; 
     };
     options {
-      allow-transfer { any; };
-      #allow-transfer { 192.168.73.31; };
-      allow-query-cache { trusted; };
+      allow-transfer { cluster; secondaries; };
+      allow-query { cluster; trusted; };
+      allow-query-cache { cluster; trusted; };
+      auth-nxdomain no;
       also-notify { 192.168.73.31; };
       blackhole { bad_networks; };
       directory "/var/cache/bind";
