--- a/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
+++ b/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
@@ -48,8 +48,9 @@ spec:
               value: "yes"
             - name: LDAP_ENABLE_TLS
               value: "yes"
-            #- name: LDAP_REQUIRE_TLS
-            #  value: "yes"
+            # Turn on LDAP_REQUIRE_TLS once populated
+            # - name: LDAP_REQUIRE_TLS
+            #   value: "yes"
             - name: LDAP_LDAPS_PORT_NUMBER
               value: "636"
             - name: LDAP_TLS_CERT_FILE
@@ -62,4 +63,3 @@ spec:
               value: /etc/tls/dh.pem
           ports:
             - containerPort: 389
-            - containerPort: 636
