ansible gmc a little off

--- a/ansible/playbooks/roles/common/tasks/binary_packages.yml
+++ b/ansible/playbooks/roles/common/tasks/binary_packages.yml
@@ -3,6 +3,7 @@
   ansible.builtin.package:
     state: latest
     name:
+      - acl
       - curl
       - git
       - "lua{{ lua_minor_version}}"   # for nvim configuration
