--- a/ansible/playbooks/roles/development/tasks/golang.yml
+++ b/ansible/playbooks/roles/development/tasks/golang.yml
@@ -1,15 +1,22 @@
 ---
+- name: check for golang
+  ansible.builtin.stat:
+    path: /usr/local/go
+  register: go_status
 - name: install golang
+  when: not go_status.stat.exists
   block:
     - name: download golang x86_64
       when: ansible_architecture == "x86_64"
       ansible.builtin.get_url:
         url: "https://go.dev/dl/go{{ golang_version }}.linux-amd64.tar.gz"
         dest: "/usr/local/src/go{{ golang_version }}.tar.gz"
-      notify: install golang from tarball
     - name: download golang aarch64
       when: ansible_architecture == "aarch64"
       ansible.builtin.get_url:
         url: "https://go.dev/dl/go{{ golang_version }}.linux-arm64.tar.gz"
         dest: "/usr/local/src/go{{ golang_version }}.tar.gz"
-      notify: install golang from tarball
+    - name: install golang from tarball
+      ansible.builtin.command:
+        cmd: >
+          tar -C /usr/local -xzf /usr/local/src/go{{ golang_version }}.tar.gz
