--- a/ansible/playbooks/roles/user_gmc/tasks/gmc_shell.yml
+++ b/ansible/playbooks/roles/user_gmc/tasks/gmc_shell.yml
@@ -1,19 +1,19 @@
 ---
-- name: Ensure George's group is set
-  ansible.builtin.group:
-    state: present
-    gid: "1000"
-    name: gmc
-
-- name: Ensure George user is set
-  ansible.builtin.user:
-    state: present
-    comment: "George Cummings"
-    create_home: true
-    group: gmc
-    name: gmc
-    shell: /bin/zsh
-    uid: "1000"
+#- name: Ensure George's group is set
+#  ansible.builtin.group:
+#    state: present
+#    gid: "1000"
+#    name: gmc
+#
+#- name: Ensure George user is set
+#  ansible.builtin.user:
+#    state: present
+#    comment: "George Cummings"
+#    create_home: true
+#    group: gmc
+#    name: gmc
+#    shell: /bin/zsh
+#    uid: "1000"
 
 - name: Ensure George's remote_tmp is set
   ansible.builtin.file:
@@ -21,7 +21,7 @@
     path: /home/gmc/.ansible/tmp
     mode: "0770"
     owner: gmc
-    group: gmc
+    group: deployer
 
 - name: gmc zsh configuration
   ansible.builtin.copy:
@@ -29,7 +29,7 @@
     dest: /home/gmc/.zshrc
     mode: "0644"
     owner: gmc
-    group: gmc
+    group: user
 
 - name: ensure local bin and src exists
   ansible.builtin.file:
@@ -37,7 +37,7 @@
     path: "/home/gmc/.local/{{ item }}"
     mode: "0700"
     owner: gmc
-    group: gmc
+    group: user
   loop:
     - bin
     - src
