Bitnami put openldap in a paid subscription

--- a/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
+++ b/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
@@ -24,7 +24,7 @@ spec:
             secretName: ldap-tls
       containers:
         - name: openldap
-          image: bitnami/openldap:latest
+          image: bitnamilegacy/openldap:latest
           volumeMounts:
             - name: tls-volume
               readOnly: true
