--- a/k8s/fleetwood/aaa/bind9/deployment.yaml
+++ b/k8s/fleetwood/aaa/bind9/deployment.yaml
@@ -25,6 +25,8 @@ spec:
                 path: db.cummings-online.local
               - key: db-10-11
                 path: db.10.11
+              - key: db-172-16-73
+                path: db.172.16.73
               - key: db-192-168
                 path: db.192.168
       containers:
