--- a/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
+++ b/k8s/fleetwood/aaa/openldap/02_ldap_deploy.yaml
@@ -18,6 +18,9 @@ spec:
       labels:
         app: ldap
     spec:
+      securityContext:
+        runAsUser: 373
+        runAsGroup: 373
       volumes:
         - name: tls-volume
           secret:
