Restructured MacOS zshrc

--- a/ansible/playbooks/roles/user_gmc/tasks/gmc_macos.yml
+++ b/ansible/playbooks/roles/user_gmc/tasks/gmc_macos.yml
@@ -18,6 +18,7 @@
       - starship
       - tree
       - wget
+      - zsh-history-substring-search
 
 - name: Install rust and cargo on MacOS
   ansible.builtin.command: rustup-init
