--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -2,7 +2,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-3, 1920x1200@59.95, 0x0, 1       # Eizo (Montreal and Knowlton)
 monitor=DP-2, 1920x1200@59.95, 1920x0, 1, transform, 1 # Eizo (Knowlton)
-monitor=HDMI-A-1, 1920x1080@60.04, -1920x0  # XP Pen Artist Pro v2 13.3
+monitor=HDMI-A-1, 1920x1080@60.04, -1920x0, 1  # XP Pen Artist Pro v2 13.3
 
 # Logging
 #disable_logs = false
@@ -29,9 +29,9 @@ input {
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
-    tablet {
-        output = HDMI-A-1
-    };
+#    tablet {
+#        output = HDMI-A-1
+#    };
 }
 
 general {
@@ -88,10 +88,6 @@ dwindle {
 
 master {
     new_status = master
-}
-
-gestures {
-    workspace_swipe = off
 }
 
 misc {
