Goemon is now the nixos cache

--- a/k8s/fleetwood/aaa/bind9/configmap.yaml
+++ b/k8s/fleetwood/aaa/bind9/configmap.yaml
@@ -55,7 +55,7 @@ data:
   db-cummings-online: |
     $TTL 86400
     @  IN    SOA   ns.cummings-online.local. gmc.cummings-online.local. (
-      2025120101   ; serial
+      2025120102   ; serial
            86400   ; refresh
            28800   ; retry
           604800   ; expire
@@ -93,7 +93,7 @@ data:
     ldap        IN  A   10.11.0.11
     krb5        IN  A   10.11.0.12
           
-    nixoscache  IN CNAME zenigata.cummings-online.local.
+    nixoscache  IN CNAME goemon.cummings-online.local.
     nfs         IN CNAME jigen.cummings-online.local.
     time        IN CNAME lupin.cummings-online.local.
     test        IN CNAME ingress1.cummings-online.local.
