Murasaki hypr set up

--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -2,7 +2,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
 monitor=eDP-1, 1920x1080@60.0000, 0x0, 1   # Murasaki screen
-#monitor=DP-1, 1920x1080@60.0000, -1920x0, 1   # XP-Pen Artist 13.3
 
 # Logging
 #disable_logs = false
@@ -33,13 +32,9 @@ input {
 
     follow_mouse = 1
 
-    touchpad 2
+    touchpad {
         natural_scroll = no
     }
-
-    tablet {
-        output = DP-1
-    };
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
@@ -98,10 +93,6 @@ dwindle {
 
 master {
     new_status = master
-}
-
-gestures {
-    workspace_swipe = off
 }
 
 misc {
