--- a/k8s/fleetwood/aaa/bind9/configmap.yaml
+++ b/k8s/fleetwood/aaa/bind9/configmap.yaml
@@ -55,7 +55,7 @@ data:
   db-cummings-online: |
     $TTL 86400
     @  IN    SOA   ns.cummings-online.local. gmc.cummings-online.local. (
-      2025120102   ; serial
+      2025120502   ; serial
            86400   ; refresh
            28800   ; retry
           604800   ; expire
@@ -67,26 +67,27 @@ data:
 
     ; Hosts --------------------------------------------------------------
     gw-mtl      IN	A	192.168.68.1
+    bambu       IN	A	192.168.68.232
     brother     IN	A	192.168.68.61
+    canon	    IN	A	192.168.73.61
     goemon      IN	A	192.168.68.73
     goliath     IN	A	192.168.68.74
     rpi1	    IN 	A 	192.168.68.31
     rpi2 	    IN 	A 	192.168.68.32
     rpi3        IN 	A 	192.168.68.33
     rpi4        IN	A	192.168.68.34
-    bambu       IN	A	192.168.68.232
-    spectre     IN	A	192.168.68.254
-    gw-knw      IN	A	192.168.73.1
     fujiko      IN	A	192.168.73.12
-    ns3         IN	A	192.168.73.31
+    gw-knw      IN	A	192.168.73.1
+    jigen       IN  A   10.11.0.3
+    jigen-int   IN  A   172.16.73.3
     knw-access  IN	A	192.168.73.43
     knw-ha      IN	A	192.168.73.41
     knw-jump    IN	A	192.168.73.42
-    canon	    IN	A	192.168.73.61
     lupin       IN  A   10.11.0.2
     lupin-int   IN  A   172.16.73.2
-    jigen       IN  A   10.11.0.3
-    jigen-int   IN  A   172.16.73.3
+    ns3         IN	A	192.168.73.31
+    sanda       IN  A   192.168.68.231
+    spectre     IN	A	192.168.68.254
     zenigata    IN  A   10.11.0.4
     zenigata-int IN  A   172.16.73.4
     ingress1    IN  A   10.11.0.10
@@ -100,7 +101,7 @@ data:
   db-172-16-73: |
     $TTL 86400
     @ IN SOA ns.cummings-online.local hostmaster.cummings-online.local. (
-     2025101701 ; serial
+     2025120501 ; serial
           86400 ; refresh
           28800 ; retry
          604800 ; expire
@@ -118,7 +119,7 @@ data:
   db-192-168: |
     $TTL 86400
     @ IN SOA ns.cummings-online.local hostmaster.cummings-online.local. (
-     2025100101 ; serial
+     2025120501 ; serial
           86400 ; refresh
           28800 ; retry
          604800 ; expire
@@ -139,6 +140,7 @@ data:
     68.33   IN PTR rpi3.cummings-online.local.
     68.34   IN PTR rpi4.cummings-online.local.
     68.34   IN PTR rpi4.cummings-online.local.
+    68.231  IN PTR sanda.cummings-online.local.
     68.232  IN PTR bambu.cummings-online.local.
     68.254  IN PTR spectre.cummings-online.local.
     73.1    IN PTR gw-knw.cummings-online.local.
