--- a/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-murasaki.conf
@@ -1,3 +1,10 @@
+# Ecosystem
+
+ecosystem {
+  no_update_news = true
+  no_donation_nag = true
+  enforce_permissions = false
+}
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
