Goemon back to Mtl; hyprland fix prep for modular config

--- a/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
+++ b/nixos/home-manager/gmc/hypr/hyprland-goemon.conf
@@ -136,6 +136,7 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, appimage-run $MUSIC/appImages/cider-linux-x64.AppImage
 bind = $mainMod, N, exec, joplin-desktop
 bind = $mainMod, O, exec, obsidian
+bind = $mainMod, R, exec, firefox --new-instance --profile ~/.mozilla/firefox/eypklzjy.iCloud --kiosk https://icloud.com 
 bind = $mainMod, Z, exec, zotero
 
 # Backscreen light binding
